remove leadeboard
